Bug 1303279: reset codec resolution to last frame when reconfiguring in webrtc r=pkerr